tests/characterization/snapshots/characterization__bash_external_calls__init_backend.snap
---
source: tests/characterization/main.rs
expression: "normalize(&context.fake_tools.log(), context.sandbox.path())"
---
{"tool":"curl","ordinal":1,"argv":["curl","-fsSL","https://github.com/oqtopus-team/oqtopus-cli/archive/refs/heads/main.tar.gz","-o","<TEST_ROOT>/tmp/<TEMP_DIR>/oqtopus-cli-main.tar.gz"],"cwd":"<TEST_ROOT>/work","env":{"HOME":"<TEST_ROOT>/home","XDG_CONFIG_HOME":"<TEST_ROOT>/xdg-config","XDG_DATA_HOME":"<TEST_ROOT>/xdg-data","OQTOPUS_CLI_VERSION":"9.8.7-characterization"}}
{"tool":"date","ordinal":1,"argv":["date","-u","+%Y-%m-%dT%H:%M:%SZ"],"cwd":"<TEST_ROOT>/work","env":{"HOME":"<TEST_ROOT>/home","XDG_CONFIG_HOME":"<TEST_ROOT>/xdg-config","XDG_DATA_HOME":"<TEST_ROOT>/xdg-data","OQTOPUS_CLI_VERSION":"9.8.7-characterization"}}
