tests/characterization/snapshots/characterization__bash_external_calls__manager_install_release.snap
---
source: tests/characterization/main.rs
expression: "normalize(&context.fake_tools.log(), context.root())"
---
{"tool":"curl","ordinal":1,"argv":["curl","-fsSL","https://github.com/oqtopus-team/oqtopus-manager/archive/refs/tags/v1.2.3.tar.gz","-o","<TEST_ROOT>/tmp/<TEMP_DIR>/manager-v1.2.3.tar.gz"],"cwd":"<TEST_ROOT>/work","env":{"HOME":"<TEST_ROOT>/home","XDG_CONFIG_HOME":"<TEST_ROOT>/xdg-config","XDG_DATA_HOME":"<TEST_ROOT>/xdg-data","OQTOPUS_CLI_VERSION":"9.8.7-characterization"}}
{"tool":"uv","ordinal":1,"argv":["uv","sync","--frozen","--no-dev","--project","<TEST_ROOT>/xdg-data/oqtopus/manager/releases/manager-v1.2.3"],"cwd":"<TEST_ROOT>/work","env":{"HOME":"<TEST_ROOT>/home","XDG_CONFIG_HOME":"<TEST_ROOT>/xdg-config","XDG_DATA_HOME":"<TEST_ROOT>/xdg-data","OQTOPUS_CLI_VERSION":"9.8.7-characterization"}}
